--- a/web/templates/list/list.html
+++ b/web/templates/list/list.html
@@ -81,9 +81,9 @@
                 <div class="col-xs-8">
                     <div class="cover">
                         <a href="#" class="add-item" data-toggle="modal" data-target="#newItemModal"><i class="icon_plus"></i></a>
-                        <div class="cover-inner">
+                        <a href="/list/{{ id }}" class="cover-inner">
                             <img src="{{ cover }}" title="{{ name }}" alt="{{ name }}" />
-                        </div>
+                        </a>
                     </div>
                     <div class="details">
                         <h3 class="name">
