Testing out vertical alignment of items

--- a/web/static/web/hbs/item_template.hbs
+++ b/web/static/web/hbs/item_template.hbs
@@ -1,26 +1,24 @@
-<div class="col-sm-4 card-wrapper">
+<div class="col-sm-12 card-wrapper">
     <div class="card">
-        <div class="pic">
-            <a class="favourite pull-right" href="#"><i class="icon_star_alt"></i></a>
-            <img src="{{ card_image }}" title="Name of thing here"/>
-        </div>
+        <div class="row">
+            <div class="col-sm-1 pic">
+                <a class="favourite pull-right" href="#"><i class="icon_star_alt"></i></a>
+                <img src="{{ card_image }}" title="Name of thing here"/>
+            </div>
 
-        <div class="detail">
-            <header class="col-xs-9">
-                <h3 class="title"> {{ truncate name 12 }}</h3>
+            <div class="col-sm-4">
+                <h3 class="title"> {{ truncate name 20 }}</h3>
 
                 <p class="wittl-meta-description">{{ truncate attributes.city 15 }}</p>
-            </header>
-            <div class="user-metrics col-xs-3">
-                <div class="row">
-                    <span class="col-xs-6 icon_building key"></span>
-                    <small class="col-xs-6 value">25</small>
-                </div>
-                <div class="row">
-                    <span class="col-xs-6 icon_pin_alt key"></span>
-                    <small class="col-xs-6 value">3</small>
-                </div>
+            </div>
+            <div class="col-sm-7">
+                <ul class="wittl-data">
+                    <li style="background: #f1c40f;">Average cost of £132.99 travelling from <strong>Manchester</strong></li>
+                    <li style="background: #e67e22;">2 hours and 45 minutes from <strong>Madrid</strong></li>
+                    <li style="background: #e74c3c;">Nothing</li>
+                </ul>
             </div>
         </div>
+
     </div>
 </div>
