--- a/web/static/web/hbs/item_template.hbs
+++ b/web/static/web/hbs/item_template.hbs
@@ -13,9 +13,9 @@
             </div>
             <div class="col-sm-7">
                 <ul class="wittl-data">
-                    <li style="background: #f1c40f;">Average cost of £132.99 travelling from <strong>Manchester</strong></li>
-                    <li style="background: #e67e22;">2 hours and 45 minutes from <strong>Madrid</strong></li>
-                    <li style="background: #e74c3c;">Nothing</li>
+                    <li style="color: #e74c3c;"></li>
+                    <li style="color: #2ecc71;"></li>
+                    <li style="color: #9b59b6;"></li>
                 </ul>
             </div>
         </div>
