--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -134,7 +134,7 @@
 
             <div class="main-pane">
 
-                <div class="container-fluid content">
+                <div class="container content">
                     {% block content %}
 
                     {% endblock %}
