Fixed zoopla import
Added subtitle as a field on all items

--- a/web/static/web/hbs/item_template.hbs
+++ b/web/static/web/hbs/item_template.hbs
@@ -9,7 +9,7 @@
             <div class="col-sm-4">
                 <h3 class="title"> {{ truncate name 20 }}</h3>
 
-                <p class="wittl-meta-description">{{ truncate attributes.city 15 }}</p>
+                <p class="wittl-meta-description">{{ truncate attributes.subtitle 15 }}</p>
             </div>
             <div class="col-sm-7">
                 <ul class="wittl-data">
