Natural language wittl interface

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -3,7 +3,9 @@
 // Import vendor
 @import "vendor/bootstrap";
 @import "vendor/sidr";
-// Import components
+@import "vendor/nlform";
+
+// Import components 
 @import "components";
 
 /* ------------------------------
