--- a/web/templates/list/view.html
+++ b/web/templates/list/view.html
@@ -189,8 +189,10 @@
     <script type="text/javascript" src="/static/web/js/vendor/ladda/spin.min.js"></script>
     <script type="text/javascript" src="/static/web/js/vendor/ladda/ladda.min.js"></script>
     <script type="text/javascript" src="/static/web/js/vendor/ladda/ladda.jquery.min.js"></script>
+    <script type="text/javascript" src="/static/web/js/vendor/jquery.cookie.js"></script>
 
     <script type="text/javascript" src="/static/web/js/wittlist_view/modal.js"></script>
+    <script type="text/javascript" src="/static/web/js/wittlist_view/favourite.js"></script>
     <script type="text/javascript" src="/static/web/js/wittlist_view/sorting.js"></script>
 
 
