--- a/web/templates/list/list.html
+++ b/web/templates/list/list.html
@@ -60,9 +60,23 @@
                 </div>
             </form>
 
-            <ul class="wittlist-list row">
+            <!-- <ul class="wittlist-list row">
 
-            </ul>
+            </ul> -->
+
+            <div ng-app="wittl">
+                <div ng-controller="ListsCtrl">
+                    <ul>
+                        <li ng-repeat="list in lists">
+                        {% verbatim %}
+                            
+                            <pre>{{ list }}</pre>
+                        
+                        {% endverbatim %}
+                        </li>
+                    </ul>
+                </div>
+            </div>
 
         </div>
 
@@ -72,6 +86,11 @@
 {% block javascript %}
     
     <script src="/static/web/js/vendor/handlebars.js"></script>
+    <script src="/static/web/js/vendor/angular/angular.js"></script>
+    <script src="/static/web/js/vendor/angular/angular-resource.js"></script>
+    <script src="/static/web/js/wittl/controllers.js"></script>
+    <script src="/static/web/js/wittl/services.js"></script>
+    <script src="/static/web/js/wittl/app.js"></script>
 
 {% verbatim %}
     <script id="lists-template" type="text/x-handlebars-template">
@@ -106,31 +125,32 @@
 {% endverbatim %}
 
     <script>
+
         $(function() {
 
             // Template that shit
-            $.getJSON('/api/v1/lists', function(lists) {
-                var list_ctxs = [];
+            // $.getJSON('/api/v1/lists', function(lists) {
+            //     var list_ctxs = [];
 
-                for(var i = 0; i < lists.length; i++) {
-                    list_ctxs.push({
-                        id: lists[i].id,
-                        name: lists[i].name,
-                        users: lists[i].users.length,
-                        items: lists[i].items.length,
-                        cover: (lists[i].items[0]) 
-                                ? lists[i].items[0].card_image 
-                                : "/static/web/images/emptywittlist.png"
-                    }); 
-                }
+            //     for(var i = 0; i < lists.length; i++) {
+            //         list_ctxs.push({
+            //             id: lists[i].id,
+            //             name: lists[i].name,
+            //             users: lists[i].users.length,
+            //             items: lists[i].items.length,
+            //             cover: (lists[i].items[0]) 
+            //                     ? lists[i].items[0].card_image 
+            //                     : "/static/web/images/emptywittlist.png"
+            //         }); 
+            //     }
 
-                var data = { lists: list_ctxs };
+            //     var data = { lists: list_ctxs };
 
-                var lists_template = Handlebars.compile($('#lists-template').html());
-                $('.wittlist-list')
-                    .empty()
-                    .append(lists_template(data));
-            });
+            //     var lists_template = Handlebars.compile($('#lists-template').html());
+            //     $('.wittlist-list')
+            //         .empty()
+            //         .append(lists_template(data));
+            // });
 
 
         });
