Added angular templating to list/lists and removed handlebars

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -41,7 +41,7 @@
 
     </head>
 
-    <body>
+    <body ng-app="wittl">
 
         <!-- Visual Debugging (e.g. current Boostrap/responsive screen width) -->
         <!-- <div class="debug">
