--- a/web/templates/list/view.html
+++ b/web/templates/list/view.html
@@ -118,93 +118,122 @@
 
 {% block content %}
 
-    <section class="wittlist-left pane">
-        <header>
-            <h2>My Wittlist - {{ list.name }}</h2>
-        </header>
+    <div ng-app="wittl">
+        <section class="wittlist-left pane" ng-controller="ListItemsCtrl">
+            <header>
+                <h2>My Wittlist - {{ list.name }}</h2>
+            </header>
 
-        <div class="add-new-card">
-            <form id="new-list-item-form" method="POST" action="{% url 'listitem-list' %}">
-                {% csrf_token %}
-                <div class="input-group wittl-input-group">
-                    <input type="text" name="url" class="form-control" placeholder="Add a new item to your Wittlist"/>
+            <div class="add-new-card">
+                <form id="new-list-item-form" method="POST" action="{% url 'listitem-list' list.id %}">
+                    {% csrf_token %}
+                    <div class="input-group wittl-input-group">
+                        <input type="text" name="url" class="form-control"
+                               placeholder="Add a new item to your Wittlist"/>
                     <span class="input-group-btn">
                         <button id="new-list-item-submit" class="ladda-button wittl-btn btn" type="submit"
                                 data-style="zoom-in"><span class="ladda-label">Insert</span></button>
                     </span>
-                </div>
-                <input type="hidden" name="list_id" value="{{ list.id }}"/>
-            </form>
-        </div>
-
-        <!-- Wittlist -->
-        <div class="wittlist row">
-
-
-        </div>
-
-        <!-- End wittlist -->
-    </section>
-
-    <section class="wittlist-right pane">
-        <header>
-            <h2>Wittl By
-                <!-- <small class="browse"><a href="#" data-toggle="modal" data-target="#browse-wittls">Browse...</a></small> -->
-            </h2>
-        </header>
-
-        <!-- <div class="query-wrapper">
-            <div class="input-group wittl-input-group">
-                <input type="text" name="query-input" class="form-control" placeholder="Add a new Wittl here..."/>
-              <span class="input-group-btn">
-                <button type="button" class="btn wittl-btn">WITTL</button>
-              </span>
-            </div>
-        </div> -->
-
-        <div class="wittl-wrapper">
-
-            <form class="nl-form wittl-form loading">
-                <ul class="wittls">
-                    <li class="wittl-clause">
-                        <div class="wittl">
-                            <select>
-                                <option value="1" selected>travel prices</option>
-                                <option value="2">Indian</option>
-                                <option value="3">French</option>
-                                <option value="4">Japanese</option>
-                                <option value="2">Italian</option>
-                            </select>
-                        </div>
-                        <span class="preposition">from</span>
-                        <input type="text" value="" placeholder="London" data-subline="For example: <em>Los Angeles</em> or <em>Rome</em>"/>
-                    </li>
-                    <div class="wittl-conjunction">
-                        and
                     </div>
-                    <li class="wittl-clause">
-                        <div class="wittl">
-                            <select>
-                                <option value="1">travel prices</option>
-                                <option value="2">Indian</option>
-                                <option value="3" selected>nearby</option>
-                                <option value="4">Japanese</option>
-                                <option value="2">Italian</option>
-                            </select>
+                    <input type="hidden" name="list_id" value="{{ list.id }}"/>
+                </form>
+            </div>
+
+            <!-- Wittlist -->
+            <div class="wittlist row">
+                <div class="col-sm-12 card-wrapper">
+                    <div class="card" ng-repeat="item in items">
+                        <div class="row">
+                            <div class="col-sm-1 pic">
+                                <a class="favourite pull-right" ng-if="item.favourited" href="#"><i class="icon_star"></i></a>
+                                <a class="favourite pull-right" ng-if="!item.favourited" href="#"><i class="icon_star_alt"></i></a>
+
+                                <img src="[[ item.card_image ]]" title="Name of thing here"/>
+                            </div>
+
+                            <div class="col-sm-4">
+                                <h3 class="title"> [[ item.name | limitTo: 20 ]]</h3>
+
+                                <p class="wittl-meta-description">[[ item.subtitle | limitTo:10 ]]</p>
+                            </div>
+                            <div class="col-sm-7">
+                                <ul class="wittl-data">
+                                    <li style="color: #e74c3c;"></li>
+                                    <li style="color: #2ecc71;"></li>
+                                    <li style="color: #9b59b6;"></li>
+                                </ul>
+                            </div>
                         </div>
-                        <span class="preposition"></span>
-                        <input type="text" value="" placeholder="supermarkets" data-subline="For example: <em>Los Angeles</em> or <em>Rome</em>"/>
-                    </li>
-                    {% for comparator in comparators %}
-                        {% include 'list/comparator.html' with comparator=comparator %}
-                    {% endfor %}
-                </ul>
-                <div class="nl-overlay"></div>  
-            </form>
-        </div>
 
-    </section>
+                    </div>
+                </div>
 
+            </div>
+
+            <!-- End wittlist -->
+        </section>
+
+        <section class="wittlist-right pane">
+            <header>
+                <h2>Wittl By
+                    <!-- <small class="browse"><a href="#" data-toggle="modal" data-target="#browse-wittls">Browse...</a></small> -->
+                </h2>
+            </header>
+
+            <!-- <div class="query-wrapper">
+                <div class="input-group wittl-input-group">
+                    <input type="text" name="query-input" class="form-control" placeholder="Add a new Wittl here..."/>
+                  <span class="input-group-btn">
+                    <button type="button" class="btn wittl-btn">WITTL</button>
+                  </span>
+                </div>
+            </div> -->
+
+            <div class="wittl-wrapper">
+
+                <form class="nl-form wittl-form loading">
+                    <ul class="wittls">
+                        <li class="wittl-clause">
+                            <div class="wittl">
+                                <select>
+                                    <option value="1" selected>travel prices</option>
+                                    <option value="2">Indian</option>
+                                    <option value="3">French</option>
+                                    <option value="4">Japanese</option>
+                                    <option value="2">Italian</option>
+                                </select>
+                            </div>
+                            <span class="preposition">from</span>
+                            <input type="text" value="" placeholder="London"
+                                   data-subline="For example: <em>Los Angeles</em> or <em>Rome</em>"/>
+                        </li>
+                        <div class="wittl-conjunction">
+                            and
+                        </div>
+                        <li class="wittl-clause">
+                            <div class="wittl">
+                                <select>
+                                    <option value="1">travel prices</option>
+                                    <option value="2">Indian</option>
+                                    <option value="3" selected>nearby</option>
+                                    <option value="4">Japanese</option>
+                                    <option value="2">Italian</option>
+                                </select>
+                            </div>
+                            <span class="preposition"></span>
+                            <input type="text" value="" placeholder="supermarkets"
+                                   data-subline="For example: <em>Los Angeles</em> or <em>Rome</em>"/>
+                        </li>
+                        {% for comparator in comparators %}
+                            {% include 'list/comparator.html' with comparator=comparator %}
+                        {% endfor %}
+                    </ul>
+                    <div class="nl-overlay"></div>
+                </form>
+            </div>
+
+        </section>
+    </div>
 {% endblock %}
 
 {% block javascript %}
@@ -231,31 +260,22 @@
     <script type="text/javascript" src="/static/web/js/wittlist_view/favourite.js"></script>
     <script type="text/javascript" src="/static/web/js/wittlist_view/sorting.js"></script>
 
+    <script src="/static/web/js/vendor/angular/angular.js"></script>
+    <script src="/static/web/js/vendor/angular/angular-resource.js"></script>
+    <script src="/static/web/js/vendor/angular/angular-cookies.js"></script>
+    <script src="/static/web/js/wittl/filters.js"></script>
+    <script src="/static/web/js/wittl/directives.js"></script>
+    <script src="/static/web/js/wittl/controllers.js"></script>
+    <script src="/static/web/js/wittl/services.js"></script>
+    <script src="/static/web/js/wittl/app.js"></script>
+
 
     <script type="text/javascript">
         $(function () {
 
-            var nlform = new NLForm( $('.wittl-form')[0] );
+            var nlform = new NLForm($('.wittl-form')[0]);
             // Cloak until JS has done its magic
             nlform.el.className = nlform.el.className.replace(' loading', '');
-
-            var wittlSorting = new WittlSorting("{% url "list-score-data" list.id%}");
-            var itemTemplate = Handlebars.Templates['item_template'];
-            var addItem = function (item) {
-                var $newItem = $(itemTemplate(item));
-                var $card = $newItem.find('.card');
-                $card.data('list-item-id', item.id);
-                $card.data('modal-data', item.attributes);
-                wittlSorting.scoreCard($card);
-
-                $('.wittlist').isotope('insert', $newItem);
-            };
-
-            wittlSorting.fetchScoreData(function () {
-                $.getJSON("{% url 'list-detail' list.id %}", function (data) {
-                    _.each(data.items, addItem);
-                });
-            });
 
             $("#new-list-item-form").submit(function (e) {
                 var form = $(this);
@@ -317,11 +337,11 @@
                 } else {
                     $(this).addClass('selected')
                             .attr('data-selected', 1);
-                }               
+                }
 
             });
 
-            $('#browse-next').on('click', function(e) {
+            $('#browse-next').on('click', function (e) {
                 e.preventDefault();
                 console.log($('.browsable-wittl[data-selected="1"]'));
             });
